--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=arithmetic-operations
+spring.application.name=pitschallenge-backend
 spring.devtools.restart.enabled=true
 
 security.jwt.secret-key=MSqj+3BvbXM2YtxZhNZ8hDMcW4lO4yxYkFklN7IbraQ=
 security.jwt.expiration=600000
 
-spring.datasource.url=jdbc:mysql://mysqldb:3306/pitsdb?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/pitsdb?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=secret
 
