--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=pitschallenge-backend
 spring.devtools.restart.enabled=true
 
-security.jwt.secret-key=MSqj+3BvbXM2YtxZhNZ8hDMcW4lO4yxYkFklN7IbraQ=
+security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration=600000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/pitsdb?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 ## Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+app.user.password=${APP_USER_PASSWORD}
