add record soft delete and query them by input search and sortby

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.devtools.restart.enabled=true
 
 security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration=600000
+security.jasypt.secret-key=${JASYPT_SECRET_KEY}
 
 spring.datasource.url=jdbc:mysql://localhost:3306/pitsdb?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${DATABASE_USER}
