--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 	<dependencies>
 
 	  <dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-security</artifactId>
-	    <version>3.3.0</version>
+	    <groupId>org.jasypt</groupId>
+	    <artifactId>jasypt</artifactId>
+	    <version>1.9.3</version>
 	  </dependency>
 
     <dependency>
